[package]
name = "bpf_loader"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "bpf_loader"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

bs58 = "0.5.0"
borsh = "0.10.3"
anyhow = "1.0.75"
hex = "0.4.3"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.5"
console_error_panic_hook = "0.1"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
