[package]
name = "gmx_solana"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "gmx_solana"

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.5"   # ⬅ bump
bs58 = "0.5"                 # ⬅ bump
console_error_panic_hook = "0.1"
sha2 = "0.10"                # ⬅ move here (runtime)
# optional / keep if you use them elsewhere:
base64 = "0.21"
web-sys = { version = "0.3", features = ["console"] }
anyhow = "1.0"

[build-dependencies]
# keep only if you really use them in a build script
anchor-idl = "0.3.1"
serde_json = "1"
proc-macro2 = "1"
darling = "0.14"
quote = "1"
syn = "1"
anyhow = "1.0"
borsh = "0.10.3"
heck = "0.4"

[profile.release]
lto = true
opt-level = "z"              # ⬅ a bit smaller than 's'
codegen-units = 1            # ⬅ smaller binary
panic = "abort"              # ⬅ smaller binary
strip = "debuginfo"
