[package]
name = "jito"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "tips_distribution"

[dependencies]
bytes = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

bs58 = "0.5.0"
base64 = "0.21.5"
borsh = "0.10.3"
chrono = { version = "0.4", features = [ "std" ], default-features = false }
tokio = "=1.25.0"
anyhow = "1.0.75"
hex = "0.4.3"
log = "0.4.20"
num-traits = "0.2"
sha2 = "0.10.7"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
anchor-lang = { version = "0.31.1", features = ["idl-build", "derive"] }
serde-wasm-bindgen = "0.5"
console_error_panic_hook = "0.1"

[build-dependencies]
anchor-idl = "0.4.1"       # for GeneratorOptions
serde_json = "1.0"
proc-macro2 = "1"
darling = "0.14"
quote = "1"
syn = "1"
anyhow      = "1.0"
borsh = "0.10.3"
sha2        = "0.10"
heck = "0.4"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
