[package]
name = "whirlpool"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "whirlpool"

[dependencies]
bytes = "1.1.0"
prost = "0.13"
prost-types = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

bs58 = "0.5.0"
base64 = "0.21.5"
borsh = "0.10.3"
chrono = { version = "0.4", features = [ "std" ], default-features = false }
tokio = "=1.25.0"
anyhow = "1.0.75"
hex = "0.4.3"
log = "0.4.20"
num-traits = "0.2"
sha2 = "0.10.7"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.5"
console_error_panic_hook = "0.1"

# Add build dependencies
[build-dependencies]
prost-build = "0.13" # Matching prost version

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
