[package]
name = "spl-token-22"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "spl_token_22"

[dependencies]
bs58                     = "0.5"   # base58 decode
borsh                    = "0.10"  # Borsh (de)serialization
anyhow                   = "1.0"   # ergonomic error handling
serde                    = { version = "1.0", features = ["derive"] }
serde_json               = "1.0"   # JSON serialization
serde-wasm-bindgen       = "0.5"   # serde ↔ Wasm bindings
wasm-bindgen             = { version = "0.2", features = ["serde-serialize"] }
console_error_panic_hook = "0.1"   # nicer panic messages in Wasm

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full", "parsing"] }
anyhow      = "1.0"
heck = "0.4"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo" 